--- a/datascience.html
+++ b/datascience.html
@@ -42,7 +42,7 @@
       <div id="bottomheader">
         <div class="container-fluid mb-4">
           <nav class="navbar navbar-dark navbar-expand-md p-3 pe-4 pe-sm-5">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
               <h3 style="font-size: 1.8rem;">Brijesh Jotaniya</h3>
             </a>
             <button data-bs-toggle="collapse" data-bs-target="#navbarToggler" type="button" class="navbar-toggler">
@@ -63,7 +63,7 @@
                   </div>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="sayhi.php">Say Hii!</a>
+                  <a class="nav-link" href="sayhi.html">Say Hii!</a>
                 </li>
               </ul>
             </div>
@@ -187,11 +187,11 @@
             <h6>System Design</h6>
           </div>
           <div class="col-md-4 mt-1 ps-4 pe-4">
-            <h4>Contact Me</h4>
-            <a href="tel:+919586011927" class="footercontactlinkstyle"><i class="fa-solid fa-phone-flip"></i> +(91) 9586011927</a><br>
+            <h4>Contact <Menu:context></Menu:context></h4>
+            <a href="tel:+447466638762" class="footercontactlinkstyle"><i class="fa-solid fa-phone-flip"></i> +(44) 7466638762</a><br>
             <a href="mailto:bjotaniya4@gmail.com" class="footercontactlinkstyle"><i class="fa-solid fa-envelope"></i> bjotaniya4@gmail.com</a>
             <div class="ratio ratio-16x9">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d118147.82106515896!2d70.73889438913474!3d22.273466166614785!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3959c98ac71cdf0f%3A0x76dd15cfbe93ad3b!2sRajkot%2C%20Gujarat!5e0!3m2!1sen!2sin!4v1687956208082!5m2!1sen!2sin" frameborder="0"></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d70117.35759694656!2d-1.2135009074290932!3d52.6361527008147!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487742ab49b76c73%3A0x9a151d2a6fb49cb8!2sLeicester!5e1!3m2!1sen!2suk!4v1705450509219!5m2!1sen!2suk" frameborder="0"></iframe>
             </div> 
           </div>
         </div>
