--- a/datascience.html
+++ b/datascience.html
@@ -32,7 +32,7 @@
           <div class="container">
             <div class="row">
               <div class="col-12 text-end">
-                <a class="p-1" href="tel:+919586011927"><i class="fa-solid fa-phone-flip headericonstyle"></i> +(91) 9586011927</a>
+                <a class="p-1" href="tel:+44 7466638762"><i class="fa-solid fa-phone-flip headericonstyle"></i> +(91) 9586011927</a>
                 <a class="p-1" href="mailto:bjotaniya4@gmail.com"><i class="fa-solid fa-envelope headericonstyle"></i> bjotaniya4@gmail.com</a>
               </div>
             </div>
