--- a/mobileapp.html
+++ b/mobileapp.html
@@ -181,7 +181,7 @@
             </p>
             <a href="https://www.linkedin.com/in/brijesh-jotaniya-01890227a/" ><i class="fa-brands fa-2x fa-linkedin"></i></a>
             <a href="https://www.instagram.com/brijesh_jotaniya/" class="mx-2"><i class="fa-brands fa-2x fa-instagram"></i></a>
-            <a href="https://github.com/Brijeshvj" ><i class="fa-brands fa-2x fa-github"></i></a>
+            <a href="https://github.com/IamBrijeshh" ><i class="fa-brands fa-2x fa-github"></i></a>
           </div>
           <div class="col-md-3 ps-4 pe-4 mt-1 footer-col2">
             <h4>Important Skills</h4>
