--- a/sayhi.html
+++ b/sayhi.html
@@ -129,7 +129,7 @@
           </script>
 
           <div class="col-12 col-sm-6 col-md-6 p-3 formc">
-            <form action="" method="post" id="myForm" onsubmit="return validateForm()">
+            <form action="" method="get" id="myForm" onsubmit="return validateForm()">
               <div class="row mt-4">
                 <div class="form-group col-md-6 mb-3">
                   <input type="text" class="form-control" id="myTextInput" name="fname" oninput="restrictToAlphabetic(this)" placeholder="First Name*" data-required="true">
