--- a/sayhi.html
+++ b/sayhi.html
@@ -130,7 +130,7 @@
           </script>
 
           <div class="col-12 col-sm-6 col-md-6 p-3 formc">
-            <form action="" method="get" id="myForm" onsubmit="return validateForm()">
+            <form action="" method="get" id="myForm">
               <div class="row mt-4">
                 <div class="form-group col-md-6 mb-3">
                   <input type="text" class="form-control" id="myTextInput" name="fname" oninput="restrictToAlphabetic(this)" placeholder="First Name*" data-required="true">
@@ -182,7 +182,7 @@
                 <div class="form-group col-md-12 mb-3 text-center">
                   <span id="error-message" class="error-message"></span>
                   <br>
-                  <button class="btn btn-primary submitbtn" name="btn-submit" type="button"><i class="fa-solid fa-paper-plane"></i>  Send Message
+                  <button class="btn btn-primary submitbtn" name="btn-submit" type="button" onclick="return validateForm()"><i class="fa-solid fa-paper-plane"></i>  Send Message
                   </button>
                 </div>
               </div>
