--- a/sayhi.html
+++ b/sayhi.html
@@ -179,7 +179,9 @@
                 <div class="form-group col-md-12 mb-3 text-center">
                   <span id="error-message" class="error-message"></span>
                   <br>
-                  <button class="btn btn-primary submitbtn" name="btn-submit" type="submit" onclick="resetForm()" ><i class="fa-solid fa-paper-plane"></i>  Send Message
+                  <button class="btn btn-primary submitbtn" name="btn-submit" type="submit" ><i class="fa-solid fa-paper-plane"></i>  Send Message
+                  </button>
+                  <button class="btn btn-primary submitbtn" name="btn-submit" type="submit" onclick="resetForm()">  Reset Form
                   </button>
                   <script>
                     function resetForm() {
