--- a/sayhi.html
+++ b/sayhi.html
@@ -181,7 +181,7 @@
                   <br>
                   <button class="btn btn-primary submitbtn" name="btn-submit" type="submit" ><i class="fa-solid fa-paper-plane"></i>  Send Message
                   </button>
-                  <button class="btn btn-primary submitbtn" name="btn-submit" type="submit" onclick="resetForm()">  Reset Form
+                  <button class="btn btn-primary submitbtn" name="btn-submit" type="button" onclick="resetForm()">  Reset Form
                   </button>
                   <script>
                     function resetForm() {
